-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8
-
Component/s: core-libs
-
b10
-
generic
-
generic
-
Verified
If IPv6 is enabled on Windows XP or Windows Server 2003 then this test fails. This may actually be an oddity in java.net.DatagramSocket but should be investigated so that the test runs reliably in the nightly testing where some machines have the experimental IPv6 stack enabled.
#Test Results (version 2)
#Sat Aug 27 07:18:37 BST 2011
#checksum:66eb750160cc903f
#-----testdescription-----
$file=D:\\alan\\test\\java\\nio\\channels\\DatagramChannel\\ChangingAddress.java
$root=D:\\alan\\test
keywords=bug6431343
run=ASSUMED_ACTION main ChangingAddress\r\n
source=ChangingAddress.java
title=Test that DatagramChannel.getLocalAddress returns the right local address after connect/disconnect.
#-----environment-----
#-----testresult-----
description=file:/D:/alan/test/java/nio/channels/DatagramChannel/ChangingAddress.java
elapsed=47 0:00:00.047
end=Sat Aug 27 07:18:37 BST 2011
environment=regtest
execStatus=Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected: 0.0.0.0/0.0.0.0, actual: /10.169.79.120
hostname=MRCOOL
javatestOS=Windows 2003 5.2 (amd64)
javatestVersion=4.1.4
script=com.sun.javatest.regtest.RegressionScript
sections=script_messages build compile main
start=Sat Aug 27 07:18:37 BST 2011
test=java/nio/channels/DatagramChannel/ChangingAddress.java
work=D:\\alan\\JTwork\\java\\nio\\channels\\DatagramChannel
#section:script_messages
----------messages:(4/216)*----------
JDK under test: (D:\\alan\\jdk1.8)
java version "1.8.0-internal"
Java(TM) SE Runtime Environment (build 1.8.0-internal-201108252105.ab23780.jdk-b00)
Java HotSpot(TM) 64-Bit Server VM (build 22.0-b01, mixed mode)
#section:build
----------messages:(3/103)----------
command: build ChangingAddress
reason: Named class compiled on demand
elapsed time (seconds): 0.031
result: Passed. Build successful
#section:compile
----------messages:(3/175)*----------
command: compile D:\\alan\\test\\java\\nio\\channels\\DatagramChannel\\ChangingAddress.java
reason: .class file out of date or does not exist
elapsed time (seconds): 0.031
result: Passed. Compilation successful
#section:main
----------messages:(3/132)----------
command: main ChangingAddress
reason: Assumed action based on file name: run main ChangingAddress
elapsed time (seconds): 0.016
----------System.err:(13/709)----------
java.lang.RuntimeException: Expected: 0.0.0.0/0.0.0.0, actual: /10.169.79.120
at ChangingAddress.check(ChangingAddress.java:43)
at ChangingAddress.main(ChangingAddress.java:61)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:474)
at com.sun.javatest.regtest.MainAction$SameVMRunnable.run(MainAction.java:680)
at java.lang.Thread.run(Thread.java:722)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected: 0.0.0.0/0.0.0.0, actual: /10.169.79.120
test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected: 0.0.0.0/0.0.0.0, actual: /10.169.79.120
#Test Results (version 2)
#Sat Aug 27 07:18:37 BST 2011
#checksum:66eb750160cc903f
#-----testdescription-----
$file=D:\\alan\\test\\java\\nio\\channels\\DatagramChannel\\ChangingAddress.java
$root=D:\\alan\\test
keywords=bug6431343
run=ASSUMED_ACTION main ChangingAddress\r\n
source=ChangingAddress.java
title=Test that DatagramChannel.getLocalAddress returns the right local address after connect/disconnect.
#-----environment-----
#-----testresult-----
description=file:/D:/alan/test/java/nio/channels/DatagramChannel/ChangingAddress.java
elapsed=47 0:00:00.047
end=Sat Aug 27 07:18:37 BST 2011
environment=regtest
execStatus=Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected: 0.0.0.0/0.0.0.0, actual: /10.169.79.120
hostname=MRCOOL
javatestOS=Windows 2003 5.2 (amd64)
javatestVersion=4.1.4
script=com.sun.javatest.regtest.RegressionScript
sections=script_messages build compile main
start=Sat Aug 27 07:18:37 BST 2011
test=java/nio/channels/DatagramChannel/ChangingAddress.java
work=D:\\alan\\JTwork\\java\\nio\\channels\\DatagramChannel
#section:script_messages
----------messages:(4/216)*----------
JDK under test: (D:\\alan\\jdk1.8)
java version "1.8.0-internal"
Java(TM) SE Runtime Environment (build 1.8.0-internal-201108252105.ab23780.jdk-b00)
Java HotSpot(TM) 64-Bit Server VM (build 22.0-b01, mixed mode)
#section:build
----------messages:(3/103)----------
command: build ChangingAddress
reason: Named class compiled on demand
elapsed time (seconds): 0.031
result: Passed. Build successful
#section:compile
----------messages:(3/175)*----------
command: compile D:\\alan\\test\\java\\nio\\channels\\DatagramChannel\\ChangingAddress.java
reason: .class file out of date or does not exist
elapsed time (seconds): 0.031
result: Passed. Compilation successful
#section:main
----------messages:(3/132)----------
command: main ChangingAddress
reason: Assumed action based on file name: run main ChangingAddress
elapsed time (seconds): 0.016
----------System.err:(13/709)----------
java.lang.RuntimeException: Expected: 0.0.0.0/0.0.0.0, actual: /10.169.79.120
at ChangingAddress.check(ChangingAddress.java:43)
at ChangingAddress.main(ChangingAddress.java:61)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:474)
at com.sun.javatest.regtest.MainAction$SameVMRunnable.run(MainAction.java:680)
at java.lang.Thread.run(Thread.java:722)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected: 0.0.0.0/0.0.0.0, actual: /10.169.79.120
test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected: 0.0.0.0/0.0.0.0, actual: /10.169.79.120
- relates to
-
JDK-7098037 java/net/DatagramSocket/ChangingAddress.java fail on Windows Vista and Windows 2008
-
- Closed
-