7084030: DatagramSocket.getLocalAddress inconsistent on XP/2003 when IPv6 enabled and socket is connected

Use family of connected IP address to retrieve desired local address of the datagram socket

Reviewed-by: chegar